started background texture work

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <a class="prev">&#10094;</a>
     <a class="next">&#10095;</a>
   </div>
-  <div id="home"></div>
+  <div id="home">
+    <h3>home</h3>
+  </div>
   <div id="products"></div>
 
      
