--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 </head>
 <body>
-  <nav class="col-xs-12">
+  <div class='container-fluid bg'>
+    <nav class="col-xs-12">
     
     <div id="logo-tagline" class="col-xs-12 col-sm-6">  
       <h1>Forever Flowers</h1>
@@ -31,49 +32,24 @@
       <a href="#" id="contact-btn" class="col-xs-4">Contact</a>
     </div>
   </nav>
-  
-  <div class="slideshow-container col-sm-6">
+    <div class="slideshow-container col-sm-6">
     <img src="images/rose.jpg" class="slide">
     <a class="prev">&#10094;</a>
     <a class="next">&#10095;</a>
   </div>
-  <div id="home">
+    <div id="home">
     <h3>home</h3>
   </div>
-  <div id="products"></div>
-
-     
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <div id="contact-container">
+    <div id="products" class="col-xs-12">
+    </div>
+    <div id="contact-container">
             <div id="contact">
                 <a href="https://www.facebook.com/luke.wood.792" target="_blank">
                     <i class="fa fa-5x fa-facebook-square"></i>
                 </a>
             </div>
         </div>
+  </div>
   
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
