updated about me section

--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@
     <a class="prev">&#10094;</a>
     <a class="next">&#10095;</a>
   </div>
-    <div id="home">
-    <h3>home</h3>
+    <div id="home" class="jumbotron">
+    <h3>About us</h3>
+    <p>Quite a few items get crocheted here at Forever Flowers. Doilies, baby clothes, 
+    and custom hats to name a few. But we specialize in handmade bouquets of crocheted flowers.
+    </p>
+    
+    <p>We do mean forever! We think that giving that special someone a bouquet of all their favorite flowers, 
+    a bouquet that they can keep forever, is quite a special gift. Over thirty years of crocheting experience
+    is put into making each and every flower, all made by hand.
+    </p>
   </div>
     <div id="products" class="col-xs-12">
     </div>
@@ -51,10 +59,19 @@
         </div>
   </div>
   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   
-
          <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
