--- a/index.html
+++ b/index.html
@@ -80,19 +80,12 @@
             <p>We do mean forever! We think that giving that special someone a bouquet of all their favorite flowers, a bouquet that they can keep forever, is quite a special gift. Over thirty years of crocheting experience is put into making each and every flower, all made by hand.
             </p>
         </div>
-        <div id="products" class="col-xs-12 jumbotron">
+        <div id="products" class="col-xs-12">
           <h3> Product div</h3>
         </div>
-        <div id="contact-container">
-            <div id="contact">
-                <a href="https://www.facebook.com/luke.wood.792" target="_blank">
-                    <i class="fa fa-5x fa-facebook-square"></i>
-                </a>
-            </div>
-        </div>
 
-<div class="email-form-container">
-  <form id="contact-form" method="post" action="contact.php" role="form">
+<div id="contact" class="email-form-container">
+  <form id="contact-form" method="post" action="https://formspree.io/lewoodwebdev@gmail.com" role="form">
 
     <div class="messages"></div>
 
@@ -156,7 +149,7 @@
 
 
     <!-- internal stylesheet -->
-    <link href="styles.css" rel="stylesheet" />
+    <link href="minified-styles.css" rel="stylesheet" />
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -168,8 +161,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <!-- internal script file -->
-    <script src="scripts/contact.js"></script>
-    <script src="scripts/slides.js"></script>
+    <script src="scripts/animations-min.js"></script>
 
 
 </body>
