halfway through converting template; changed name to debbie's den

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="col-xs-12">
 
             <div id="logo-tagline" class="col-xs-12 col-sm-6">
-                <h1>Forever Flowers</h1>
+                <h1>Debbie's Den</h1>
             </div>
             <div id="nav-buttons" class="col-xs-12 col-sm-6">
                 <a href="#" id="about-btn" class="col-xs-4">About</a>
@@ -149,7 +149,7 @@
 
 
     <!-- internal stylesheet -->
-    <link href="minified-styles.css" rel="stylesheet" />
+    <link href="styles/minified-styles.css" rel="stylesheet" />
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
