--- a/tester.html
+++ b/tester.html
@@ -27,7 +27,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage"><span class="glyphicon glyphicon-home"></span></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -39,7 +39,8 @@
   </div>
 </nav>
 
-<div class="jumbotron text-center">
+<div class="jumbotron text-center bouquet-bg">
+
   <h1>Debbie's Den</h1> 
   <p>Handcrafted gifts and trinkets</p> 
 </div>
@@ -49,12 +50,52 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>About Debbie's Den</h2>
-      <h4>Quite a few items get crocheted here at Debbie's Den. Doilies, baby clothes, and custom hats to name a few. But we specialize in handmade bouquets of crocheted flowers.</h4><br>
+      <h4>Quite a few items get crocheted here at Debbie's Den. Doilies, baby clothes, and custom hats to name a few. But we specialize in handmade bouquets of crocheted flowers.</h4>
       <h4>We think giving that special someone a bouquet of all their favorite flowers, a bouquet that will stay just the way you gave it, is quite a special gift. Over thirty years of crocheting experience is put into hand-making each and every flower.</h4>
-      <br><button class="btn btn-default btn-lg">Get in Touch</button>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-signal logo"></span>
+        <div class="slideshow-container">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="images/rose.jpg" alt="roses" style="width:100%;">
+                    </div>
+
+                    <div class="item">
+                        <img src="images/daffodil.jpg" alt="daffodils" style="width:100%;">
+                    </div>
+
+                    <div class="item">
+                        <img src="images/poinsettia.jpg" alt="poinsettia" style="width:100%;">
+                    </div>
+
+                    <div class="item">
+                        <img src="images/lily.jpg" alt="lilies" style="width:100%;">
+                    </div>
+
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+        </div>
     </div>
   </div>
 </div>
@@ -66,9 +107,8 @@
     </div>
     <div class="col-sm-8">
       <h2>Our Values</h2><br>
-      <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-      <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h4><strong>MISSION:</strong> Our mission is to provide quality, custom, handcrafted products to people who appreciate items made just for them. Receiving a gift made specially for you is a wonderful feeling.</h4><br>
+      <h4><strong>VISION:</strong> Our products aren't for everyone.  Far from just another stock greeting card on a shelf, or a standard bouquet from a big-box store, our products aren't made in a factory half the world away. They're made entirely by hand, in a tiny town in Northern Michigan.</h4>
     </div>
   </div>
 </div>
@@ -80,7 +120,7 @@
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-off logo-small"></span>
+      <div class="baby-icon"></div>
       <h4>BABY ACCESSORIES</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
@@ -94,6 +134,12 @@
       <h4>DOILIES</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-lock logo-small"></span>
+      <h4>FLOWERS</h4>
+      <p>Lorem ipsum dolor sit amet..</p>
+    </div>
+
   </div>
   <br><br>
   <div class="row slideanim">
