product icons added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Forever Flowers</title>
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -39,7 +40,7 @@
   </div>
 </nav>
 
-<div class="jumbotron text-center bouquet-bg">
+<div class="jumbotron text-center bg">
 
   <h1>Debbie's Den</h1> 
   <p>Handcrafted gifts and trinkets</p> 
@@ -49,7 +50,7 @@
 <div id="about" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-      <h2>About Debbie's Den</h2>
+      <h2 class="scale-font">About Debbie's Den</h2>
       <h4>Quite a few items get crocheted here at Debbie's Den. Doilies, baby clothes, and custom hats to name a few. But we specialize in handmade bouquets of crocheted flowers.</h4>
       <h4>We think giving that special someone a bouquet of all their favorite flowers, a bouquet that will stay just the way you gave it, is quite a special gift. Over thirty years of crocheting experience is put into hand-making each and every flower.</h4>
     </div>
@@ -100,7 +101,7 @@
   </div>
 </div>
 
-<div class="container-fluid bg-grey">
+<div class="container-fluid">
   <div class="row">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-globe logo slideanim"></span>
@@ -116,49 +117,37 @@
 <!-- Container (Services Section) -->
 <div id="products" class="container-fluid text-center">
   <h2>PRODUCTS</h2>
-  <h4>What we offer</h4>
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
       <div class="baby-icon"></div>
       <h4>BABY ACCESSORIES</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <p>baby-sized blankets, hats, gloves and more</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-heart logo-small"></span>
+      <div class="mask-icon"></div>
       <h4>HATS</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <p>custom winter hats and masks</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-lock logo-small"></span>
+      <div class="doily-icon"></div>
       <h4>DOILIES</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <p>spruce up any surface with a custom doily</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-lock logo-small"></span>
+      <div class="flower-icon"></div>
       <h4>FLOWERS</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <p>any custom arrangement for your special someone</p>
+    </div>
+   <div class="col-sm-4">
+      <div class="pikachu-icon"></div>
+      <h4>MORE</h4>
+      <p>we are open to suggestions for new products, so long as 
+      we can make them</p>
     </div>
 
   </div>
   <br><br>
-  <div class="row slideanim">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-leaf logo-small"></span>
-      <h4>GREEN</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-certificate logo-small"></span>
-      <h4>CERTIFIED</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-wrench logo-small"></span>
-      <h4 style="color:#303030;">HARD WORK</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-  </div>
 </div>
 
 <!-- Container (Contact Section) -->
@@ -188,12 +177,13 @@
     </div>
   </div>
 </div>
+
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top" id="footer-link">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
 </footer>
-<script src="scripts/test.js"></script>
 
+<script src="scripts/test.js"></script>
 </body>
 </html>
