adding breakpoints for screensizes; created modularized stylesheets

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
 
     <!-- font-awesome links -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="styles/test.css">
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/mobile.css">
+  <link rel="stylesheet" href="styles/tablet.css">
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
@@ -40,7 +42,7 @@
   </div>
 </nav>
 
-<div class="jumbotron text-center bg">
+<div class="jumbotron text-center plaid-bg">
 
   <h1>Debbie's Den</h1> 
   <p>Handcrafted gifts and trinkets</p> 
